--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-fastapi==0.116.2
-streamlit==1.49.1
+fastapi
+uvicorn
+streamlit==1.29.0
 Pillow==10.3.0
-torch==2.9.1+cpu
-torchvision==0.24.1+cpu
+torch==2.2.0
+torchvision==0.17.0
